2023-05-21  Araki Ken  <arakiken@users.sf.net>

	* ui_copymode.[ch], ui_screen.c:
	  Pressing '?' in copy mode searchs for a string backward.

	* tool/accessories/applycfg.sh: Added.

2023-05-20  Araki Ken  <arakiken@users.sf.net>

	* Makefile.in: Error in installing libzmodem.la is fixed.

	* libctl/vt_bidi.[ch], vt_line_bidi.c: Arabic characters are redrawn
	  entirely during being edited.

2023-05-07  Araki Ken  <arakiken@users.sf.net>

	* configure.in: --disable-image option disables mlimgloader.

2023-05-06  Araki Ken  <arakiken@users.sf.net>

	* ui_window_cairo.c: -Wint-conversion warning is fixed.
	  (https://github.com/arakiken/mlterm/issues/67)

	* ui_brltty.h: ui_brltty_key() -> ui_brltty_speak_key()

2023-04-02  Araki Ken  <arakiken@users.sf.net>

	* sdl2/ui.h: Compiling error in win32 is fixed.

	* version.h: 3.9.3 -> 3.9.3post

2023-04-01  Araki Ken  <arakiken@users.sf.net>

	* 3.9.3 released.
	  (tag "3.9.3")

	* configure.in, mlterm.spec, main/version.h.in,
	  mlterm.c, android/jni/version.h, vt_parser.c:
	  updated for 3.9.3.

2023-03-23  Araki Ken  <arakiken@users.sf.net>

	* cocoa.m: Unexpected scrolling by scrollbar is fixed.

2023-03-21  Araki Ken  <arakiken@users.sf.net>

	* quartz/ui_sb_view_factory.c: ui_sb_view_set_dpr() is added.

	* ui_sb_view_factory.[ch], ui_main_config.c:
	  ui_simple_scrollbar_set_dpr() -> ui_sb_view_set_dpr()

	* README.ja, mlterm.1: Updated and fix typo.

2023-03-20  Araki Ken  <arakiken@users.sf.net>

	* im_kbd.c: im_kbd_new() returns NULL if kbd layout except arabic and
	  hebrew is requested.

	* ui_screen.c:
	  - button_motion() ignores Button2Mask, Button4Mask - Button7Mask in
	    selecting region.
	    (https://github.com/arakiken/mlterm/issues/53)
	  - Not only pointer_motion() but button_motion() and button_pressed()
	    call show_pointer().

2023-03-18  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, README.ja, etc/main, etc/main.ja: Updated.
