@@ -1,3 +1,7 @@
+2023-06-03  Araki Ken  <arakiken@users.sf.net>
+
+	* tool/accessories/applyfontcfg.sh: Added.
+
 2023-05-21  Araki Ken  <arakiken@users.sf.net>
 
 	* ui_copymode.[ch], ui_screen.c:
